--- a/config.toml
+++ b/config.toml
@@ -8,3 +8,8 @@ category = "categories"
 
 [params]
 description = "Open source alternatives to popular software tools."
+
+[sitemap]
+  changefreq = "weekly"
+  priority = 0.5
+  filename = "sitemap.xml"
