Fix baseURL for GitHub Pages subfolder + sitemap

--- a/config.toml
+++ b/config.toml
@@ -13,3 +13,5 @@ description = "Open source alternatives to popular software tools."
   changefreq = "weekly"
   priority = 0.5
   filename = "sitemap.xml"
+
+enableRobotsTXT = true
